--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-Hello
-请勿将本仓库内的任何内容用于商业或非法目的。
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <h1>请勿将本仓库内的任何内容，用于商业或非法目的。</h1>
+    </head>
+</html>
+
